--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,35 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+main {
+    margin-top: 100px;
+}
+
+/* HEADER */
+
+/* IMAGES */
+
+.content {
+    background-color: red;
+}
+
+img {
+    width: 100%;
+}
+
+.text {
+    padding-bottom: 10px;
+}
+
+.brand {
+    font-size: 15px;
+}
+
+.item {
+    font-weight: 600;
+}
