--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 main {
-    margin-top: 100px;
+    padding-top: 150px;
 }
 
 /* POSITION */
@@ -30,6 +30,44 @@ main {
 }
 
 /* HEADER */
+header {
+    position: fixed;
+    width: 100%;
+    background-color: #FF6900;
+    z-index: 10;
+    padding: 10px;
+    font-weight: 600;
+}
+
+.categories {
+    display: inline-block;
+}
+
+.logo {
+    vertical-align: middle;
+    width: 100px;
+}
+
+.icons {
+    align-items: center;
+    justify-content: end;
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.icon {
+    vertical-align: middle;
+    width: 20px;
+    margin: 0px 5px;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(138deg) brightness(102%) contrast(101%);
+}
+
+a {
+    color: white;
+    vertical-align: middle;
+    text-decoration: none;
+    margin: 10px;
+}
 
 /* IMAGES */
 
@@ -39,10 +77,6 @@ main {
 
 img {
     width: 100%;
-}
-
-.main-pic {
-    /* display: block; */
 }
 
 .hover-pic {
