--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -30,6 +30,12 @@ main {
 }
 
 /* HEADER */
+
+.head-container {
+    max-width: 1200px;
+    margin: auto;
+}
+
 header {
     position: fixed;
     width: 100%;
@@ -41,18 +47,25 @@ header {
 
 .categories {
     display: inline-block;
+    vertical-align: middle;
+    align-items: center;
+    text-align: center;
+
+}
+
+.categories a {
+    color: white;
+    text-decoration: none;
+    margin: 10px;
 }
 
 .logo {
-    vertical-align: middle;
     width: 100px;
 }
 
-.icons {
-    align-items: center;
-    justify-content: end;
+.container-icon {
     vertical-align: middle;
-    display: inline-block;
+    float: right;
 }
 
 .icon {
@@ -60,13 +73,6 @@ header {
     width: 20px;
     margin: 0px 5px;
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(138deg) brightness(102%) contrast(101%);
-}
-
-a {
-    color: white;
-    vertical-align: middle;
-    text-decoration: none;
-    margin: 10px;
 }
 
 /* IMAGES */
@@ -145,4 +151,8 @@ img {
     font-size: 30px;
     top: 10px;
     right: 0px;
+}
+
+.hearts-label:hover {
+    color: red;
 }
