--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -152,19 +152,38 @@ img {
 
 footer {
     background-color: #1A1A1A;
-    height: 100px;
     color: white;
+    padding: 20px;
 }
 
 .info {
-    padding: 30px 10px;
+    vertical-align: middle;
+    padding: 20px 10px;
+}
+
+.info h3 {
+    padding-bottom: 10px;
 }
 
 .info a {
     text-decoration: none;
-    padding: 10px 15px 10px 0;
+    line-height: 10px;
     color: white;
     font-size: 15px;
 }
 
-.social {}
+.social {
+    padding: 20px;
+    line-height: 10px;
+    float: right;
+}
+
+.social h4 {
+    margin-bottom: 15px;
+}
+
+.social-logo img {
+    width: 35px;
+    padding: 5px;
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(138deg) brightness(102%) contrast(101%);
+}
